--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,19 @@
-#app{
-  height:90vh;
-	
+.day {
+  background-color: white;
+  color: black;
 }
-.night{
+
+.night {
   background-color: black;
-  color:white;
+  color: white;
 }
 
-#swap{
-  outline:0;
+.button_day {
+  background-color: blue;
+  color: white;
 }
 
-.button_night{
-  background-color:blue;
-  color:white; 
+.button_night {
+  background-color: orange;
+  color: black;
 }
